# binary_nn

./: .gitignore  README.md  container.code-workspace  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/instructions/: general.instructions.md
.github/skills/research-and-improve/: SKILL.md
artifacts/: model_inference_benchmark.csv  model_inference_benchmark.json  trained_model_benchmark.csv  trained_model_benchmark.json
docs/: 1BIT_NN_PAPER_INVENTORY.md  1BIT_NN_STATE_OF_THE_ART.md  ARCHITECTURE.md  BINARY_REGRESSION_EXPERIMENT_LOG.md  CURRENT_STATUS.md  IDEA.md  README.md  ROADMAP.md  TERNARY_RESEARCH_EXPERIMENT_LOG.md
scripts/: setup-gpu-host.sh
src/: benchmark_model_inference.py  benchmark_packed_binary_kernels.py  benchmark_refresh_projected_training_ops.py  binary_kernels.py  model_inference_benchmarking.py  output_paths.py  regression_data.py  regression_experiment.py  regression_models.py  run_binary_regression.py  run_binary_regression_sweep.py  run_hybrid_ternary_regression.py  run_regression_baseline.py  run_regression_comparison.py  run_shadowfree_ternary_regression.py  run_ternary_regression.py  run_ternary_research_comparison.py  ternary_kernels.py
src/checkpoints/: epoch=29-step=150-v1.ckpt  epoch=29-step=150.ckpt
tests/: test_binary_kernels.py  test_binary_regression.py  test_binary_regression_sweep.py  test_model_inference_benchmarking.py  test_regression_baseline.py  test_regression_comparison.py  test_regression_experiment.py  test_ternary_regression.py
