[project]
name = "binary-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.6.0",
    "glances>=4.5.0.5",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "litdata>=0.2.61",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "paper-search-mcp>=0.1.3",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools<82",
    "bitsandbytes>=0.49.2",
    "lightning>=2.6.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torch-tb-profiler>=0.4.3",
    "triton>=3.2.0",
    "transformer-engine[pytorch]>=2.12.0",
    "transformers>=5.2.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
